--- a/src/Hph/View/front/cashless.html.twig
+++ b/src/Hph/View/front/cashless.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Cashless{% endblock %}
-{% block titleMobile %}Cashless{% endblock %}
+{% block titleMobile %}CASHLESS{% endblock %}
 {% block content %}
 
 {% endblock %}
