--- a/src/Hph/View/front/dimaorl.html.twig
+++ b/src/Hph/View/front/dimaorl.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Dimanche à Orléans{% endblock %}
-{% block titleMobile %}Dimanche{% endblock %}
+{% block titleMobile %}DIMANCHE{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
