--- a/src/Hph/View/front/planning.html.twig
+++ b/src/Hph/View/front/planning.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Planning{% endblock %}
-{% block titleMobile %}Planning{% endblock %}
+{% block titleMobile %}PLANNING{% endblock %}
 {% block content %}
     <div class="container text-center">
 
