--- a/src/Hph/View/front/ticket.html.twig
+++ b/src/Hph/View/front/ticket.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Billetterie{% endblock %}
-{% block titleMobile %}Billetterie{% endblock %}
+{% block titleMobile %}BILLETTERIE{% endblock %}
 {% block content %}
     <div class="container">
         <a title="Logiciel billetterie en ligne" href="https://www.weezevent.com//?c=sys_widget" class="weezevent-widget-integration" target="_blank" data-src="https://www.weezevent.com/widget_billeterie.php?id_evenement=240295&lg_billetterie=1&code=74808&resize=1&width_auto=1&color_primary=00AEEF" data-width="650" data-height="600" data-id="240295" data-resize="1" data-width_auto="1" data-noscroll="0" data-nopb="0">Billetterie Weezevent</a>
