--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Bénévolat{% endblock %}
-{% block titleMobile %}Bénévolat{% endblock %}
+{% block titleMobile %}BENEVOLAT{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
