--- a/src/Hph/View/front/contact.html.twig
+++ b/src/Hph/View/front/contact.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Contact{% endblock %}
-{% block titleMobile %}Contact{% endblock %}
+{% block titleMobile %}CONTACT{% endblock %}
 {% block content %}
     <div class="container contact-content">
         <div class="col-md-offset-3 col-md-6">
