--- a/src/Hph/View/front/food.html.twig
+++ b/src/Hph/View/front/food.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Se Nourrir{% endblock %}
-{% block titleMobile %}FoodTruck{% endblock %}
+{% block titleMobile %}FOODTRUCK{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
