--- a/src/Hph/View/front/newsOne.html.twig
+++ b/src/Hph/View/front/newsOne.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}News{% endblock %}
-{% block titleMobile %}News{% endblock %}
+{% block titleMobile %}NEWS{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
