--- a/src/Hph/View/front/partner.html.twig
+++ b/src/Hph/View/front/partner.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Partenaires{% endblock %}
-{% block titleMobile %}Sponsors{% endblock %}
+{% block titleMobile %}SPONSORS{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row text-center">
