--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block title %}Lieux{% endblock %}
-{% block titleMobile %}Lieux{% endblock %}
+{% block titleMobile %}LIEUX{% endblock %}
 {% block content %}
     <div class="container text-center">
         <div class="row">
