ajout routes site

--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -66,8 +66,10 @@
         </div>
     </div>
 </nav>
+<div class="routes">
 {% block content %}
 {% endblock %}
+</div>
 <footer class="footer">
     <div class="footer-top">
         <div class="container">
