--- a/src/Hph/View/back/programmation.html.twig
+++ b/src/Hph/View/back/programmation.html.twig
@@ -3,6 +3,20 @@
 {% block content %}
     <div class="container">
         <h2 class="text-center">Ajouter un Artiste</h2>
+        <hr />
+        {% if error==2 %}
+            <div class="alert alert-danger" role="alert">Le nom ou la description d'un artiste, ainsi que les liens vers les réseaux doit être une chaîne de caractères</div>
+        {% elseif error==3 %}
+            <div class="alert alert-danger" role="alert">La taille du nom de l'artiste ne peut pas dépasser les 150 caractères</div>
+        {% elseif error==0 %}
+            <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
+        {% elseif error==4 %}
+            <div class="alert alert-danger" role="alert">L'extension n'est pas valide</div>
+        {% elseif error==5 %}
+            <div class="alert alert-danger" role="alert">La taille de l'image est trop élevé</div>
+        {% elseif error==6 %}
+            <div class="alert alert-danger" role="alert">Le poids de l'image est trop élevé</div>
+        {% endif %}
         <form method="POST" action="../../../../admin/admin.php?page=addArtist" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="title">Nom de l'artiste</label>
