--- a/src/Hph/View/back/food.html.twig
+++ b/src/Hph/View/back/food.html.twig
@@ -4,6 +4,31 @@
     <div class="container">
         <h2 class="text-center">Ajouter un foodtruck</h2>
         <hr/>
+        {% if error==2 %}
+            <div class="alert alert-danger" role="alert">Le nom ou la description d'un foodtruck doit être une chaîne de caractères</div>
+        {% elseif error==3 %}
+            <div class="alert alert-danger" role="alert">La taille du nom d'un foodtruck ne peut pas dépasser 255 caractères</div>
+        {% elseif error==0 %}
+            <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
+        {% elseif error==4 %}
+            <div class="alert alert-danger" role="alert">L'extension n'est pas valide</div>
+        {% elseif error==5 %}
+            <div class="alert alert-danger" role="alert">La taille de l'image est trop élevé</div>
+        {% elseif error==6 %}
+            <div class="alert alert-danger" role="alert">Le poids de l'image est trop élevé</div>
+        {% elseif error==0 %}
+            <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
+        {% elseif error==7 %}
+            <div class="alert alert-danger" role="alert">Le format de la date est incorrect</div>
+        {% elseif error==4 %}
+            <div class="alert alert-danger" role="alert">L'extension n'est pas valide</div>
+        {% elseif error==5 %}
+            <div class="alert alert-danger" role="alert">La taille de l'image est trop élevé</div>
+        {% elseif error==6 %}
+            <div class="alert alert-danger" role="alert">Le poids de l'image est trop élevé</div>
+        {% elseif error==7 %}
+            <div class="alert alert-danger" role="alert">Le format de la date est incorrect</div>
+        {% endif %}
         <form method="POST" action="../../../../admin/admin.php?page=addFood" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="title">Nom du foodtruck</label>
