--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -4,6 +4,23 @@
     <div class="container">
         <h2 class="text-center">Ajouter un lieu</h2>
         <hr/>
+        {% if error==2 %}
+            <div class="alert alert-danger" role="alert">Le nom ou le lien d'un lieu doit être une chaîne de caractères</div>
+        {% elseif error==3 %}
+            <div class="alert alert-danger" role="alert">La taille du nom d'un lieu ne peut pas dépasser 30 caractères</div>
+        {% elseif error==0 %}
+            <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
+        {% elseif error==4 %}
+            <div class="alert alert-danger" role="alert">L'extension n'est pas valide</div>
+        {% elseif error==5 %}
+            <div class="alert alert-danger" role="alert">La taille de l'image est trop élevé</div>
+        {% elseif error==6 %}
+            <div class="alert alert-danger" role="alert">Le poids de l'image est trop élevé</div>
+        {% elseif error==0 %}
+            <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
+        {% elseif error==7 %}
+            <div class="alert alert-danger" role="alert">Le format de la date est incorrect</div>
+        {% endif %}
         <form method="POST" action="../../../../admin/admin.php?page=addPlace" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="name">Nom du lieux</label>
