--- a/src/Hph/View/back/food.html.twig
+++ b/src/Hph/View/back/food.html.twig
@@ -57,7 +57,7 @@
             <div class="form-group">
                 <label for="img">Photo du foodtruck</label>
                 <input type="file" id="img" name="img" required>
-                <p class="help-block">Aide à la photo</p>
+                {% include 'imgInfo.html.twig' %}
             </div>
             <div class="text-center">
                 <input type="submit" name="submit" class="btn btn-primary" value="Créer">
