--- a/src/Hph/View/back/news.html.twig
+++ b/src/Hph/View/back/news.html.twig
@@ -29,7 +29,7 @@
             <div class="form-group">
                 <label for="img">Photo de l'actualité</label>
                 <input type="file" id="img" name="img" required>
-                <p class="help-block">Aide à la photo</p>
+                {% include 'imgInfo.html.twig' %}
             </div>
             <div class="checkbox">
                 <label>
