--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -20,6 +20,8 @@
             <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
         {% elseif error==7 %}
             <div class="alert alert-danger" role="alert">Le format de la date est incorrect</div>
+        {% elseif error==8 %}
+            <div class="alert alert-danger" role="alert">Le format du lien du lieu est invalide</div>
         {% endif %}
         <form method="POST" action="../../../../admin/admin.php?page=addPlace" enctype="multipart/form-data">
             <div class="form-group">
@@ -41,7 +43,7 @@
             <div class="form-group">
                 <label for="img">Photo du lieu</label>
                 <input type="file" id="img" name="img" required>
-                <p class="help-block">Aide à la photo</p>
+                {% include 'imgInfo.html.twig' %}
             </div>
             <div class="checkbox">
                 <label>
