--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -72,21 +72,15 @@
     <div class="footer-top">
         <div class="container">
             <div class="row text-center">
-                <div class="col-md-4 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div">
-                        <img src="../../../../web/img/partner/loiret.png" class="img-responsive">
-                    </a>
-                </div>
-                <div class="col-md-4 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div">
-                        <img src="../../../../web/img/partner/orleans.png" class="img-responsive">
-                    </a>
-                </div>
-                <div class="col-md-4 col-xs-4">
-                    <a href="#" class="thumbnail thumbnail-div">
-                        <img src="../../../../web/img/partner/region.png" class="img-responsive">
-                    </a>
-                </div>
+                {%  for partner in partners %}
+                    {% if partner.footer == 1 %}
+                        <div class="col-md-4 col-xs-4">
+                            <a href="#" class="thumbnail thumbnail-div">
+                                <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                            </a>
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
     </div>
