--- a/web/css/style.css
+++ b/web/css/style.css
@@ -32,12 +32,20 @@ body {
     src: url('https://fonts.googleapis.com/css?family=Roboto');
 }
 
+@font-face {
+    font-family: 'Bebas';
+    src: url('../fonts/BebasNeue.otf');
+}
+
 .font-circula {
     font-family: 'Circula-Medium', sans-serif;
 }
 
 .font-dokyo {
     font-family: 'Dokyo', sans-serif;
+}
+.font-bebas {
+    font-family: 'Bebas', regular;
 }
 
 * {
@@ -139,6 +147,7 @@ body {
 
 a:hover {
     color: rgba(43, 175, 151, 1);
+    text-decoration: none;
 }
 
 /*Fin General*/
@@ -337,6 +346,144 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
 }
+@keyframes neon {
+    0% {
+        background-color: #989898;
+        color: #004e57;
+    }
+    2%{
+        background-color: white;
+        color:#2baf97;
+    }
+    4%{
+        background-color: #989898;
+        color: #004e57;
+    }
+    10% {
+        background-color: white;
+        color:#2baf97;
+    }
+    14%{
+        background-color: #989898;
+        color: #004e57;
+    }
+    20% {
+        background-color: white;
+        color:#2baf97;
+    }
+    27%{
+        background-color: #989898;
+        color: #004e57;
+    }
+    40% {
+        background-color: white;
+        color:#2baf97;
+    }
+    89%{
+        background-color: #989898;
+        color: #004e57;
+    }
+    100% {
+        background-color: white;
+        color:#2baf97;
+    }
+}
+.panneau {
+    display: table-cell;
+    vertical-align: middle;
+    background-color: white;
+    border-radius: 20px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.6em;
+    width: 280px;
+    padding-top: 3%;
+    color: #2baf97;
+    border: 2px solid #2baf97;
+    box-shadow: -8px 2px #2baf97;
+    transform: perspective(10em) rotateY(15deg);
+    height: 50px;
+    width: 15%;
+    animation-name: neon;
+    animation-timing-function: ease-in;
+    animation-duration: 0.8s;
+    animation-play-state: paused;
+
+}
+.panneau:hover{
+    animation-play-state: running;
+}
+.ticket{
+    margin-top: 5%;
+}
+@keyframes neonbis {
+    0% {
+        background-color: #989898;
+        color: #a54d1e;
+    }
+    2%{
+        background-color: white;
+        color:#ed7a22;
+    }
+    4%{
+        background-color: #989898;
+        color: #a54d1e;
+    }
+    10% {
+        background-color: white;
+        color:#ed7a22;
+    }
+    14%{
+        background-color: #989898;
+        color: #a54d1e;
+    }
+    20% {
+        background-color: white;
+        color:#ed7a22;
+    }
+    27%{
+        background-color: #989898;
+        color: #a54d1e;
+    }
+    40% {
+        background-color: white;
+        color:#ed7a22;
+    }
+    89%{
+        background-color: #989898;
+        color: #a54d1e;
+    }
+    100% {
+        background-color: white;
+        color:#ed7a22;
+    }
+}
+.col-ticket:nth-child(even) .panneau {
+    color: #ed7a22;
+    border: 2px solid #ed7a21;
+    box-shadow: 8px 2px 0 #ed7a22;
+    transform: perspective(10em) rotateY(-15deg);
+    animation-name: neonbis;
+    animation-duration: 0.15s;
+    animation-iteration-count:4;
+}
+.left-text{
+    margin-left: 2%;
+    margin-top: 0;
+    border-top: 5px solid #004e57;
+    border-bottom: 6px solid #004e57;
+
+    padding-bottom: -3%;
+    vertical-align: 10%;
+}
+.span-ticket:nth-child(even) .left-text{
+    border-top: 6px solid #a54d1e;
+    border-bottom: 6px solid #a54d1e;
+}
+.right-text{
+   margin-right: 2%;
+   font-size: 1.4em;
+}
 
 /*Fin Accueil*/
 
@@ -520,16 +667,21 @@ a:hover {
     display: table-cell;
     vertical-align: middle;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 15px;
     font-weight: bold;
+    font-family: 'Bebas', bold;
     text-align: center;
-    font-size: 18px;
-    width: 280px;
-    padding-top: 3%;
+    font-size: 1.3em;
+    width: 20%;
+    padding: 3%;
+    margin-top: 15px;
     color: #004e57;
     border: 2px solid #2baf97;
-    box-shadow: 3px 3px 0 #017553;
-    margin-bottom:0;
+    box-shadow: 2px 2px #2baf97;
+    height: 50px;
+    transform: perspective(30em) rotateY(-15deg);
+
+
 }
 
 
@@ -595,7 +747,7 @@ a:hover {
     color: #ed7a21;
     font-size:medium;
     font-weight: 100;
-    margin: 0;
+    margin: 5%;
     }
 .plan-cancel-xs{
     color: #ed7a21;
@@ -607,7 +759,21 @@ a:hover {
     display: none;
 }
 .artist {
-    margin-bottom: 0;
+    margin-bottom: 8%;
+    margin-top: 5%;
+    font-size: 1.6em;
+    line-height:100%;
+}
+.heure{
+    border-top: 3px solid #004e57;
+    border-bottom: 3px solid #004e57;
+    font-size: 0.8em;
+
+}
+
+.bordercolor:nth-child(even) .heure{
+    border-top: 3px solid #a54d1e;
+    border-bottom: 3px solid #a54d1e;
 }
 
 /*Fin Planning*/
