--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -119,7 +119,7 @@
                                     <div class="form-group">
                                         <label for="img">Photo du lieu</label>
                                         <input type="file" id="img" name="img" required>
-                                        <p class="help-block">Aide à la photo</p>
+                                        {% include 'imgInfo.html.twig' %}
                                     </div>
                                     <div class="checkbox">
                                         <label>
