--- a/src/Hph/View/back/programmation.html.twig
+++ b/src/Hph/View/back/programmation.html.twig
@@ -121,7 +121,7 @@
                                     <div class="form-group">
                                         <label for="img">Photo de l'artiste</label>
                                         <input type="file" id="img" name="img">
-                                        <p class="help-block">Aide à la photo</p>
+                                        {% include 'imgInfo.html.twig' %}
                                     </div>
                                     <div class="form-group">
                                         <label for="url">Lien de la vidéo</label>
