--- a/src/Hph/View/back/dimaorl.html.twig
+++ b/src/Hph/View/back/dimaorl.html.twig
@@ -43,7 +43,6 @@
             <tr>
                 <th>#</th>
                 <th>Titre</th>
-                <th>Texte</th>
                 <th>Image</th>
                 <th>Actions</th>
             </tr>
@@ -53,7 +52,6 @@
                 <tr>
                     <th scope="row">{{ sunday.id }}</th>
                     <td>{{ sunday.title }}</td>
-                    <td>{{ sunday.content }}</td>
                     <td><img src="../../../../web/img/sunday/{{ sunday.imgSunday }}" alt="Image de l'activité" class="img-list"></td>
                     <td>
                         <button type="button" class="btn btn-success" data-toggle="modal" data-target="#edit{{ sunday.id }}"><i class="fa fa-pencil"></i></button>
@@ -80,7 +78,7 @@
                                     <div class="form-group">
                                         <label for="img">Photo de l'activité</label>
                                         <input type="file" id="img" name="img" required>
-                                        <p class="help-block">Aide à la photo</p>
+                                        {% include 'imgInfo.html.twig' %}
                                     </div>
                                 </div>
                                 <div class="modal-footer">
