--- a/src/Hph/View/back/imgInfo.html.twig
+++ b/src/Hph/View/back/imgInfo.html.twig
@@ -2,6 +2,6 @@
     Informations : <br />
     Hauteur maximale : 450px, <br />
     Largeur maximale : 500px, <br />
-    Poids maximal :  x, <br />
+    Poids maximal :  1 Mo, <br />
     Extensions authorisées : jpg, jpeg, png, gif
 </p>
