--- a/src/Hph/View/back/programmation.html.twig
+++ b/src/Hph/View/back/programmation.html.twig
@@ -13,6 +13,10 @@
                 <textarea class="form-control textarea" name="content" id="content" placeholder="Entrez la description de l'artiste" rows="10"></textarea>
             </div>
             <div class="form-group">
+                <label for="tags">Tags de l'artiste</label>
+                <input type="text" class="form-control" id="tags" name="tags" placeholder="Entrez tag1, tag2, tag3">
+            </div>
+            <div class="form-group">
                 <label for="img">Photo de l'artiste</label>
                 <input type="file" id="img" name="img">
                 <p class="help-block">Aide à la photo</p>
@@ -101,6 +105,10 @@
                                     <div class="form-group">
                                         <label for="content">Description de l'artiste</label>
                                         <textarea class="form-control textarea" name="content" id="content" placeholder="Entrez la description de l'artiste" rows="10">{{ artist.bio }}</textarea>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="tags">Tags de l'artiste</label>
+                                        <input type="text" class="form-control" id="tags" name="tags" placeholder="Entrez tag1, tag2, tag3" value="{{ tag.name }}">
                                     </div>
                                     <div class="form-group">
                                         <label for="img">Photo de l'artiste</label>
