--- a/web/css/style.css
+++ b/web/css/style.css
@@ -678,9 +678,11 @@ a:hover {
     color: #004e57;
     border: 2px solid #2baf97;
     box-shadow: 2px 2px #2baf97;
-    height: 50px;
-    transform: perspective(30em) rotateY(-15deg);
+    height: 130px;
 
+}
+.planning-show:hover{
+    transform: perspective(10em) rotateY(-15deg);
 
 }
 
